--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -1,10 +1,11 @@
 body {
-  line-height: 1;
-  background: #f5f5f5;
-  margin: 0;
-  padding: 0;
+    line-height: 1;
+    background: #f5f5f5;
+    margin: 0;
+    padding: 0;
 }
 .wrapper {
-  margin: 0 auto;
-  padding: 0 15px;
+    max-width: 1440px;
+    margin: 0 auto;
+    overflow: hidden;
 }
