--- a/client/src/assets/css/swiper.css
+++ b/client/src/assets/css/swiper.css
@@ -1,5 +1,6 @@
 .swiper-wrapper {
   padding-inline-start: 0;
+  margin: 0;
 }
 .swiper-slide {
   list-style: none;
@@ -7,6 +8,10 @@
 }
 .swiper-pagination {
   padding-bottom: 10px;
+}
+.swiper-container-multirow-column > .swiper-wrapper {
+  flex-wrap: wrap;
+  flex-direction: inherit;
 }
 
 .swiper-button-prev,
