--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -9,3 +9,16 @@ body {
     margin: 0 auto;
     overflow: hidden;
 }
+.custom-p {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.87);
+    line-height: 125%;
+    overflow: hidden;
+    display: block;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    text-overflow: ellipsis;
+}
