--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -8,6 +8,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   overflow: hidden;
+  height: 4000px;
 }
 .custom-p {
   font-family: "Roboto", sans-serif;
@@ -21,4 +22,15 @@ body {
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
   text-overflow: ellipsis;
+}
+.p-product {
+  line-height: 14px;
+  font-size: 0.75rem;
+  word-wrap: break-word;
+  white-space: normal;
+  overflow: hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
