--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -4,6 +4,11 @@ body {
     margin: 0;
     padding: 0;
 }
+.wrapper {
+    max-width: 1440px;
+    margin: 0 auto;
+    overflow: hidden;
+}
 .custom-p {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
