--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -1,24 +1,49 @@
 body {
-    line-height: 1;
-    background: #f5f5f5;
-    margin: 0;
-    padding: 0;
+  line-height: 1;
+  background: #f5f5f5;
+  margin: 0;
+  padding: 0;
 }
 .wrapper {
-    max-width: 1440px;
-    margin: 0 auto;
-    overflow: hidden;
+  max-width: 1440px;
+  margin: 0 auto;
+  overflow: hidden;
 }
-.custom-p {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    color: rgba(0, 0, 0, 0.87);
-    line-height: 125%;
-    overflow: hidden;
-    display: block;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1;
-    text-overflow: ellipsis;
+.custom-p-1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.87);
+  line-height: 125%;
+  overflow: hidden;
+  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  text-overflow: ellipsis;
+}
+.custom-p-2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.87);
+  line-height: 125%;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  text-overflow: ellipsis;
+}
+.custom-p-3 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.87);
+  line-height: 125%;
+  overflow: hidden;
+  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  text-overflow: ellipsis;
 }
